# pygame-partsy

./: .clangd  .gitignore  TODO.md  pyproject.toml  setup.py
c_src/: particle.c  particle_manager.c  particle_manager.h  particle_node.c  partsy.c  pygame_partsy.c
c_src/include/: partsy.h
examples/hello world/: main.py
py_src/partsy/: __init__.py  particle.pyi  particle_node.pyi  partsy.pyi
