[tool.poetry]
name = "pygame-partsy"
version = "0.0.1"
description = "Fast particle system for pygame developers"
authors = ["Rudolf Vrbensky"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pygame-ce = "^2.5.1"
setuptools = "^72.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
